Fixed issue where bottom background circle was overflowing in rsponsive design

--- a/style.css
+++ b/style.css
@@ -12,18 +12,17 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
 }
 
 .bg-top {
-    position: absolute;
+    position: fixed;
     bottom: 40%;
     right: 52%;
     z-index: -2;
 }
 
 .bg-bottom {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 52%;
     z-index: -2;
